--- a/main.css
+++ b/main.css
@@ -248,7 +248,6 @@ i{
 	background: linear-gradient(to right, #fa57c1 0%, #b166cc 21%, #7572ff 74%, #69a6f9 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;  
-      border: 3px solid transparent;
     border-image: linear-gradient(to right, #fa57c1 0%, #b166cc 21%, #7572ff 74%, #69a6f9 100%);
     border-image-slice: 1;
 }
@@ -357,5 +356,11 @@ screen and (max-width: 700px) {
 
     #header2 ul {
     	padding: 0 0;
+    }
+
+    i {
+    	position: relative;
+		top: -1px;
+		left: -2px;
     }
 }
