--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 body {
 	margin: 0;
 	background: #1c1b1a;
-	font-family: bio-sans;
+	font-family: georgia;
 	color: #ffffff;
 }
 
@@ -214,7 +214,7 @@ i{
 }
 
 #header2 h3 {
-	font-size: 8vw;
+	font-size: 6vw;
 	color: #1c1b1a;
 	margin: 1vw 0vw;
 }
@@ -282,6 +282,10 @@ a {
 	margin-right: auto;
 	width: 10vw;
 	padding: 7vw
+}
+
+html {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 @media 
