--- a/main.css
+++ b/main.css
@@ -367,4 +367,8 @@ screen and (max-width: 700px) {
 		top: -1px;
 		left: -2px;
     }
+
+    .container:hover img, .container:active img{
+	filter:blur(.6vw);
+}
 }
